@@ -1,5 +1,6 @@
 2.0.0-alpha07
 - New: We use Conscrypt now to support TLS1.3 on older Android versions (#163)
+- Improved: List sorting uses rules of currently selected language (#371)
 - Fixed: Swipe buttons in stock overview didn't work for last two items
 
 2.0.0-alpha06
